gatewayapi/hello-world/blog-svc.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-route
spec:
  parentRefs:
  - name: blog-gateway # Matches the name of your Gateway resource
  hostnames:
  - "blog"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: blog-service
      port: 80
